20230915 Add num_pt_ptcs sort with pt

--- a/g_eflow_2pcgnn.ipynb
+++ b/g_eflow_2pcgnn.ipynb
@@ -98,13 +98,13 @@
     "cf[\"project\"]  = \"g_eflow_QFCGNN\"\n",
     "\n",
     "# training configuration\n",
-    "cf[\"lr\"]                = 1E-2\n",
+    "cf[\"lr\"]                = 1E-3\n",
     "cf[\"rnd_seed\"]          = parse_args.rnd_seed\n",
     "cf[\"num_train_ratio\"]   = 0.8\n",
     "cf[\"num_bin_data\"]      = 500 # <-----------------------------------------------\n",
     "cf[\"batch_size\"]        = 64 # <-----------------------------------------------\n",
     "cf[\"num_workers\"]       = 0\n",
-    "cf[\"max_epochs\"]        = 30 # <-----------------------------------------------\n",
+    "cf[\"max_epochs\"]        = 20 # <-----------------------------------------------\n",
     "cf[\"accelerator\"]       = \"cpu\"\n",
     "cf[\"fast_dev_run\"]      = False\n",
     "cf[\"log_every_n_steps\"] = cf[\"batch_size\"] // 2"
@@ -308,10 +308,11 @@
     "class QuantumRotFCGNN(QuantumFCGNN):\n",
     "    def __init__(self, gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, gnn_num_qnn, **kwargs):\n",
     "        def ctrl_enc_operator(_input, control, control_values):\n",
+    "            qml.Hadamard(wires=gnn_idx_qubits)\n",
     "            ctrl = qml.ctrl(qml.Rot, control=control, control_values=control_values)\n",
-    "            ctrl(*_input, wires=gnn_idx_qubits)\n",
+    "            ctrl(theta=_input[0], phi=_input[1], omega=_input[2], wires=gnn_idx_qubits)\n",
     "        super().__init__(gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, gnn_num_qnn, ctrl_enc_operator, **kwargs)\n",
-    "    \n",
+    "\n",
     "# class QuantumAmpFCGNN(QuantumFCGNN):\n",
     "#     def __init__(self, gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, gnn_num_qnn, **kwargs):\n",
     "#         def ctrl_enc_operator(_input, control, control_values):\n",
@@ -400,9 +401,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_info = {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0.2, \"num_bin_data\":cf[\"num_bin_data\"], \"num_ptcs_limit\":16}\n",
-    "sig_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"sig\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"])\n",
-    "bkg_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"bkg\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"])\n",
+    "data_info = {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0.2, \"num_bin_data\":cf[\"num_bin_data\"], \"num_ptcs_limit\":None, \"num_pt_ptcs\":2}\n",
+    "sig_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"sig\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"], num_pt_ptcs=data_info[\"num_pt_ptcs\"])\n",
+    "bkg_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"bkg\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"], num_pt_ptcs=data_info[\"num_pt_ptcs\"])\n",
     "\n",
     "for rnd_seed in range(1):\n",
     "    cf[\"rnd_seed\"] = rnd_seed\n",
@@ -410,7 +411,7 @@
     "\n",
     "    sig_events  = sig_fatjet_events.generate_uniform_pt_events(bin=data_info[\"bin\"], num_bin_data=data_info[\"num_bin_data\"], num_ptcs_limit=data_info[\"num_ptcs_limit\"])\n",
     "    bkg_events  = bkg_fatjet_events.generate_uniform_pt_events(bin=data_info[\"bin\"], num_bin_data=data_info[\"num_bin_data\"], num_ptcs_limit=data_info[\"num_ptcs_limit\"])\n",
-    "    data_suffix = f\"{data_info['sig']}_{data_info['bkg']}_cut{data_info['cut']}_bin{data_info['bin']}-{data_info['num_bin_data']}_R{data_info['subjet_radius']}\"\n",
+    "    data_suffix = f\"cut{data_info['cut']}_ptc{data_info['num_pt_ptcs']}_bin{data_info['bin']}-{data_info['num_bin_data']}_R{data_info['subjet_radius']}\"\n",
     "\n",
     "    def train_classical(preprocess_mode, model_dict):\n",
     "        data_module = JetDataModule(sig_events, bkg_events, preprocess_mode)\n",
@@ -445,16 +446,17 @@
     "    #     train_classical(preprocess_mode=p_mode, model_dict=model_dict)\n",
     "\n",
     "    # Quantum Fully Connected Graph\n",
-    "    model_class     = QuantumRotFCGNN\n",
-    "    gnn_idx_qubits  = int(np.ceil(np.log2(max(\n",
-    "        max(ak.count(sig_events[\"fast_pt\"], axis=1)), \n",
-    "        max(ak.count(bkg_events[\"fast_pt\"], axis=1))))))\n",
-    "    preprocess_mode = \"normalize_pi\"\n",
-    "    gnn_layers      = parse_args.q_gnn_layers\n",
-    "    gnn_reupload    = parse_args.q_gnn_reupload\n",
-    "    gnn_num_qnn     = parse_args.q_gnn_num_qnn\n",
-    "    model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":6, \"gnn_layers\":gnn_layers, \"gnn_reupload\":gnn_reupload, \"gnn_num_qnn\":gnn_num_qnn}\n",
-    "    train_qfcgnn(preprocess_mode, model_class, model_dict)"
+    "    for gnn_layers, gnn_reupload, gnn_nn_qubits in product((1,2), (0,1), (1,2)):\n",
+    "        model_class     = QuantumRotFCGNN\n",
+    "        gnn_idx_qubits  = int(np.ceil(np.log2(max(\n",
+    "            max(ak.count(sig_events[\"fast_pt\"], axis=1)), \n",
+    "            max(ak.count(bkg_events[\"fast_pt\"], axis=1))))))\n",
+    "        preprocess_mode = \"normalize_pi\"\n",
+    "        # gnn_layers      = parse_args.q_gnn_layers\n",
+    "        # gnn_reupload    = parse_args.q_gnn_reupload\n",
+    "        gnn_num_qnn     = parse_args.q_gnn_num_qnn\n",
+    "        model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":gnn_nn_qubits, \"gnn_layers\":gnn_layers, \"gnn_reupload\":gnn_reupload, \"gnn_num_qnn\":gnn_num_qnn}\n",
+    "        train_qfcgnn(preprocess_mode, model_class, model_dict)"
    ]
   }
  ],
