--- a/r_delete_run.ipynb
+++ b/r_delete_run.ipynb
@@ -2,14 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "QuantumRotFCGNN_normalize_pi_QNN1_qidx2_qnn1_gl1_gr0 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-500_R0.2 | 20230915_172350_0\n"
+      "Classical2PCGNN_normalize_go6_gh6_gl1_mh0_ml0 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-500_R0.2 | 20230915_160730_2\n",
+      "Classical2PCGNN_normalize_go6_gh6_gl0_mh0_ml0 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-500_R0.2 | 20230915_160730_2\n",
+      "Classical2PCGNN__go6_gh6_gl2_mh0_ml0 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-500_R0.2 | 20230915_160730_2\n",
+      "Classical2PCGNN__go6_gh6_gl1_mh0_ml0 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-500_R0.2 | 20230915_160730_2\n",
+      "Classical2PCGNN__go6_gh6_gl0_mh0_ml0 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-500_R0.2 | 20230915_160730_2\n",
+      "Classical2PCGNN_tri_eflow_go6_gh6_gl2_mh0_ml0 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-500_R0.2 | 20230915_160730_1\n",
+      "Classical2PCGNN_tri_eflow_go6_gh6_gl1_mh0_ml0 | VzToZhToVevebb_VzToQCD_cut(800, 1000)_bin10-500_R0.2 | 20230915_160730_1\n"
      ]
     }
    ],
@@ -17,14 +23,14 @@
     "import wandb\n",
     "\n",
     "api     = wandb.Api()\n",
-    "date    = \"20230915_172350\"\n",
+    "date    = \"20230915_16\"\n",
     "suffix  = \"\"\n",
     "project = \"g_eflow_QFCGNN\"\n",
     "\n",
     "for run in api.runs(f\"ntuyianchen/{project}\"):\n",
     "    if date in run.id and suffix in run.id:\n",
     "        print(run.id)\n",
-    "        # run.delete()\n",
+    "        run.delete()\n",
     "    # elif run.id is None:\n",
     "    #     print(run.id)"
    ]
