20230919 Fix ctrl_enc Rot H bug

--- a/g_eflow_2pcgnn.ipynb
+++ b/g_eflow_2pcgnn.ipynb
@@ -328,9 +328,10 @@
     "class QuantumRotFCGNN(QuantumFCGNN):\n",
     "    def __init__(self, gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, gnn_num_qnn, **kwargs):\n",
     "        def ctrl_enc_operator(_input, control, control_values):\n",
-    "            qml.Hadamard(wires=gnn_idx_qubits)\n",
-    "            ctrl = qml.ctrl(qml.Rot, control=control, control_values=control_values)\n",
-    "            ctrl(theta=_input[0], phi=_input[1], omega=_input[2], wires=gnn_idx_qubits)\n",
+    "            ctrl_H = qml.ctrl(qml.Hadamard, control=control, control_values=control_values)\n",
+    "            ctrl_H(wires=gnn_idx_qubits)\n",
+    "            ctrl_R = qml.ctrl(qml.Rot, control=control, control_values=control_values)\n",
+    "            ctrl_R(theta=_input[0], phi=_input[1], omega=_input[2], wires=gnn_idx_qubits)\n",
     "        super().__init__(gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, gnn_num_qnn, ctrl_enc_operator, **kwargs)\n",
     "\n",
     "# class QuantumAmpFCGNN(QuantumFCGNN):\n",
@@ -421,7 +422,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_info = {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0.2, \"num_bin_data\":cf[\"num_bin_data\"], \"num_ptcs_limit\":None, \"num_pt_ptcs\":4}\n",
+    "data_info = {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0.2, \"num_bin_data\":cf[\"num_bin_data\"], \"num_ptcs_limit\":None, \"num_pt_ptcs\":2}\n",
     "sig_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"sig\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"], num_pt_ptcs=data_info[\"num_pt_ptcs\"])\n",
     "bkg_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"bkg\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"], num_pt_ptcs=data_info[\"num_pt_ptcs\"])\n",
     "\n",
@@ -499,7 +500,6 @@
     "        # gnn_reupload    = parse_args.q_gnn_reupload\n",
     "        gnn_num_qnn     = parse_args.q_gnn_num_qnn\n",
     "        model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":gnn_nn_qubits, \"gnn_layers\":gnn_layers, \"gnn_reupload\":gnn_reupload, \"gnn_num_qnn\":gnn_num_qnn}\n",
-    "        # model_dict[\"rnd_shuffle_inputs\"] = True\n",
     "        train_qfcgnn(preprocess_mode, model_class, model_dict)"
    ]
   }
