--- a/g_eflow_2pcgnn.ipynb
+++ b/g_eflow_2pcgnn.ipynb
@@ -104,7 +104,7 @@
     "cf[\"num_bin_data\"]      = 500 # <-----------------------------------------------\n",
     "cf[\"batch_size\"]        = 64 # <-----------------------------------------------\n",
     "cf[\"num_workers\"]       = 0\n",
-    "cf[\"max_epochs\"]        = 20 # <-----------------------------------------------\n",
+    "cf[\"max_epochs\"]        = 100 # <-----------------------------------------------\n",
     "cf[\"accelerator\"]       = \"cpu\"\n",
     "cf[\"fast_dev_run\"]      = False\n",
     "cf[\"log_every_n_steps\"] = cf[\"batch_size\"] // 2"
@@ -422,11 +422,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_info = {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0.2, \"num_bin_data\":cf[\"num_bin_data\"], \"num_ptcs_limit\":None, \"num_pt_ptcs\":2}\n",
+    "data_info = {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":None, \"num_bin_data\":cf[\"num_bin_data\"], \"num_ptcs_limit\":None, \"num_pt_ptcs\":None}\n",
     "sig_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"sig\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"], num_pt_ptcs=data_info[\"num_pt_ptcs\"])\n",
     "bkg_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"bkg\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"], num_pt_ptcs=data_info[\"num_pt_ptcs\"])\n",
     "\n",
-    "for rnd_seed in range(1):\n",
+    "for rnd_seed in range(3):\n",
     "    cf[\"rnd_seed\"] = rnd_seed\n",
     "    L.seed_everything(cf[\"rnd_seed\"])\n",
     "\n",
@@ -467,14 +467,14 @@
     "        train_info.update(data_info)\n",
     "        train(model, data_module, train_info, graph=False)\n",
     "\n",
-    "    # # classical ML only\n",
-    "    # for p_mode, go, gh, gl in product([\"\", \"normalize\", \"normalize_pi\", \"tri_eflow\"], [6], [6], [0,1,2]):\n",
-    "    #     if p_mode in [\"\", \"normalize\", \"normalize_pi\"]:\n",
-    "    #         gnn_in = 6\n",
-    "    #     elif p_mode in [\"tri_eflow\"]:\n",
-    "    #         gnn_in = 12\n",
-    "    #     model_dict = {\"gnn_in\":gnn_in, \"gnn_out\":go, \"gnn_hidden\":gh, \"gnn_layers\":gl, \"mlp_hidden\":0, \"mlp_layers\":0}\n",
-    "    #     train_classical(preprocess_mode=p_mode, model_dict=model_dict)\n",
+    "    # classical ML only\n",
+    "    for p_mode, go, gh, gl in product([\"\", \"normalize\", \"normalize_pi\", \"tri_eflow\"], [6], [6], [0,1,2]):\n",
+    "        if p_mode in [\"\", \"normalize\", \"normalize_pi\"]:\n",
+    "            gnn_in = 6\n",
+    "        elif p_mode in [\"tri_eflow\"]:\n",
+    "            gnn_in = 12\n",
+    "        model_dict = {\"gnn_in\":gnn_in, \"gnn_out\":go, \"gnn_hidden\":gh, \"gnn_layers\":gl, \"mlp_hidden\":0, \"mlp_layers\":0}\n",
+    "        train_classical(preprocess_mode=p_mode, model_dict=model_dict)\n",
     "\n",
     "    # # Quantum Fully Connected Graph\n",
     "    # for gnn_layers, gnn_reupload in product((1,2), (0,1)):\n",
@@ -489,18 +489,19 @@
     "    #     model_dict[\"gnn_measurements\"] = gnn_measurements\n",
     "    #     train_qtrivial(preprocess_mode, model_dict)\n",
     "\n",
-    "    for gnn_layers, gnn_reupload, gnn_nn_qubits in product((1,2), (0,1), (1,2)):\n",
-    "        # QFCGNN\n",
-    "        model_class     = QuantumRotFCGNN\n",
-    "        gnn_idx_qubits  = int(np.ceil(np.log2(max(\n",
-    "            max(ak.count(sig_events[\"fast_pt\"], axis=1)), \n",
-    "            max(ak.count(bkg_events[\"fast_pt\"], axis=1))))))\n",
-    "        preprocess_mode = \"normalize_pi\"\n",
-    "        # gnn_layers      = parse_args.q_gnn_layers\n",
-    "        # gnn_reupload    = parse_args.q_gnn_reupload\n",
-    "        gnn_num_qnn     = parse_args.q_gnn_num_qnn\n",
-    "        model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":gnn_nn_qubits, \"gnn_layers\":gnn_layers, \"gnn_reupload\":gnn_reupload, \"gnn_num_qnn\":gnn_num_qnn}\n",
-    "        train_qfcgnn(preprocess_mode, model_class, model_dict)"
+    "    # # for gnn_layers, gnn_reupload, gnn_nn_qubits in product((1,2), (0,1), (1,2,3)):\n",
+    "    # for gnn_layers, gnn_reupload in product((1,2), (0,1)):\n",
+    "    #     # QFCGNN\n",
+    "    #     model_class     = QuantumRotFCGNN\n",
+    "    #     gnn_idx_qubits  = int(np.ceil(np.log2(max(\n",
+    "    #         max(ak.count(sig_events[\"fast_pt\"], axis=1)), \n",
+    "    #         max(ak.count(bkg_events[\"fast_pt\"], axis=1))))))\n",
+    "    #     preprocess_mode = \"normalize_pi\"\n",
+    "    #     # gnn_layers      = parse_args.q_gnn_layers\n",
+    "    #     # gnn_reupload    = parse_args.q_gnn_reupload\n",
+    "    #     gnn_num_qnn     = parse_args.q_gnn_num_qnn\n",
+    "    #     model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":3, \"gnn_layers\":gnn_layers, \"gnn_reupload\":gnn_reupload, \"gnn_num_qnn\":gnn_num_qnn}\n",
+    "    #     train_qfcgnn(preprocess_mode, model_class, model_dict)"
    ]
   }
  ],
