--- a/g_eflow_2pcgnn.ipynb
+++ b/g_eflow_2pcgnn.ipynb
@@ -94,7 +94,7 @@
     "# global settings\n",
     "cf = {}\n",
     "cf[\"time\"]     = input(\"Type a date time or leave it space to use default date time: \") or parse_args.date_time\n",
-    "cf[\"wandb\"]    = True # <-----------------------------------------------\n",
+    "cf[\"wandb\"]    = False # <-----------------------------------------------\n",
     "cf[\"project\"]  = \"g_eflow_QFCGNN\"\n",
     "\n",
     "# training configuration\n",
@@ -104,7 +104,7 @@
     "cf[\"num_bin_data\"]      = 500 # <-----------------------------------------------\n",
     "cf[\"batch_size\"]        = 64 # <-----------------------------------------------\n",
     "cf[\"num_workers\"]       = 0\n",
-    "cf[\"max_epochs\"]        = 100 # <-----------------------------------------------\n",
+    "cf[\"max_epochs\"]        = 20 # <-----------------------------------------------\n",
     "cf[\"accelerator\"]       = \"cpu\"\n",
     "cf[\"fast_dev_run\"]      = False\n",
     "cf[\"log_every_n_steps\"] = cf[\"batch_size\"] // 2"
@@ -422,11 +422,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_info = {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":None, \"num_bin_data\":cf[\"num_bin_data\"], \"num_ptcs_limit\":None, \"num_pt_ptcs\":None}\n",
+    "data_info = {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":cf[\"num_bin_data\"], \"num_ptcs_limit\":None, \"num_pt_ptcs\":\"Full\"}\n",
     "sig_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"sig\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"], num_pt_ptcs=data_info[\"num_pt_ptcs\"])\n",
     "bkg_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"bkg\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"], num_pt_ptcs=data_info[\"num_pt_ptcs\"])\n",
     "\n",
-    "for rnd_seed in range(3):\n",
+    "for rnd_seed in range(1):\n",
     "    cf[\"rnd_seed\"] = rnd_seed\n",
     "    L.seed_everything(cf[\"rnd_seed\"])\n",
     "\n",
@@ -489,10 +489,9 @@
     "    #     model_dict[\"gnn_measurements\"] = gnn_measurements\n",
     "    #     train_qtrivial(preprocess_mode, model_dict)\n",
     "\n",
-    "    # # for gnn_layers, gnn_reupload, gnn_nn_qubits in product((1,2), (0,1), (1,2,3)):\n",
-    "    # for gnn_layers, gnn_reupload in product((1,2), (0,1)):\n",
+    "    # for gnn_layers, gnn_reupload, gnn_nn_qubits in product((1,2), (0,1), (3,4)):\n",
     "    #     # QFCGNN\n",
-    "    #     model_class     = QuantumRotFCGNN\n",
+    "    #     model_class     = QuantumRyFCGNN\n",
     "    #     gnn_idx_qubits  = int(np.ceil(np.log2(max(\n",
     "    #         max(ak.count(sig_events[\"fast_pt\"], axis=1)), \n",
     "    #         max(ak.count(bkg_events[\"fast_pt\"], axis=1))))))\n",
@@ -500,7 +499,7 @@
     "    #     # gnn_layers      = parse_args.q_gnn_layers\n",
     "    #     # gnn_reupload    = parse_args.q_gnn_reupload\n",
     "    #     gnn_num_qnn     = parse_args.q_gnn_num_qnn\n",
-    "    #     model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":3, \"gnn_layers\":gnn_layers, \"gnn_reupload\":gnn_reupload, \"gnn_num_qnn\":gnn_num_qnn}\n",
+    "    #     model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":gnn_nn_qubits, \"gnn_layers\":gnn_layers, \"gnn_reupload\":gnn_reupload, \"gnn_num_qnn\":gnn_num_qnn}\n",
     "    #     train_qfcgnn(preprocess_mode, model_class, model_dict)"
    ]
   }
