--- a/g_eflow_2pcgnn.ipynb
+++ b/g_eflow_2pcgnn.ipynb
@@ -94,7 +94,7 @@
     "# global settings\n",
     "cf = {}\n",
     "cf[\"time\"]     = input(\"Type a date time or leave it space to use default date time: \") or parse_args.date_time\n",
-    "cf[\"wandb\"]    = False # <-----------------------------------------------\n",
+    "cf[\"wandb\"]    = True # <-----------------------------------------------\n",
     "cf[\"project\"]  = \"g_eflow_QFCGNN\"\n",
     "\n",
     "# training configuration\n",
@@ -308,6 +308,7 @@
     "                num_layers        = gnn_layers, \n",
     "                num_reupload      = gnn_reupload,\n",
     "                ctrl_enc_operator = ctrl_enc_operator,\n",
+    "                **kwargs,\n",
     "                ) for _ in range(gnn_num_qnn)\n",
     "                ])\n",
     "        self.mlp = m_nn.ClassicalMLP(in_channel=gnn_num_qnn*gnn_nn_qubits, out_channel=1, hidden_channel=0, num_layers=0)\n",
@@ -324,6 +325,11 @@
     "            ctrl = qml.ctrl(qml.AngleEmbedding, control=control, control_values=control_values)\n",
     "            ctrl(features=_input, wires=range(gnn_idx_qubits, gnn_idx_qubits+3), rotation=\"Y\")\n",
     "        super().__init__(gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, gnn_num_qnn, ctrl_enc_operator, **kwargs)\n",
+    "\n",
+    "class QuantumWtRyFCGNN(QuantumRyFCGNN):\n",
+    "    def __init__(self, gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, gnn_num_qnn, **kwargs):\n",
+    "        # Weighted QuantumRyFCGNN\n",
+    "        super().__init__(gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, gnn_num_qnn, **{\"pt_weight\":True})\n",
     "    \n",
     "class QuantumRotFCGNN(QuantumFCGNN):\n",
     "    def __init__(self, gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, gnn_num_qnn, **kwargs):\n",
@@ -333,6 +339,11 @@
     "            ctrl_R = qml.ctrl(qml.Rot, control=control, control_values=control_values)\n",
     "            ctrl_R(theta=_input[0], phi=_input[1], omega=_input[2], wires=gnn_idx_qubits)\n",
     "        super().__init__(gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, gnn_num_qnn, ctrl_enc_operator, **kwargs)\n",
+    "\n",
+    "class QuantumWtRotFCGNN(QuantumRotFCGNN):\n",
+    "    def __init__(self, gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, gnn_num_qnn, **kwargs):\n",
+    "        # Weighted QuantumRyFCGNN\n",
+    "        super().__init__(gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, gnn_num_qnn, **{\"pt_weight\":True})\n",
     "\n",
     "# class QuantumAmpFCGNN(QuantumFCGNN):\n",
     "#     def __init__(self, gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, gnn_num_qnn, **kwargs):\n",
@@ -422,7 +433,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_info = {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":cf[\"num_bin_data\"], \"num_ptcs_limit\":None, \"num_pt_ptcs\":\"Full\"}\n",
+    "data_info = {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":cf[\"num_bin_data\"], \"num_ptcs_limit\":None, \"num_pt_ptcs\":8}\n",
     "sig_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"sig\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"], num_pt_ptcs=data_info[\"num_pt_ptcs\"])\n",
     "bkg_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"bkg\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"], num_pt_ptcs=data_info[\"num_pt_ptcs\"])\n",
     "\n",
@@ -467,14 +478,14 @@
     "        train_info.update(data_info)\n",
     "        train(model, data_module, train_info, graph=False)\n",
     "\n",
-    "    # classical ML only\n",
-    "    for p_mode, go, gh, gl in product([\"\", \"normalize\", \"normalize_pi\", \"tri_eflow\"], [6], [6], [0,1,2]):\n",
-    "        if p_mode in [\"\", \"normalize\", \"normalize_pi\"]:\n",
-    "            gnn_in = 6\n",
-    "        elif p_mode in [\"tri_eflow\"]:\n",
-    "            gnn_in = 12\n",
-    "        model_dict = {\"gnn_in\":gnn_in, \"gnn_out\":go, \"gnn_hidden\":gh, \"gnn_layers\":gl, \"mlp_hidden\":0, \"mlp_layers\":0}\n",
-    "        train_classical(preprocess_mode=p_mode, model_dict=model_dict)\n",
+    "    # # classical ML only\n",
+    "    # for p_mode, go, gh, gl in product([\"\", \"normalize\", \"normalize_pi\", \"tri_eflow\"], [6], [6], [0,1,2]):\n",
+    "    #     if p_mode in [\"\", \"normalize\", \"normalize_pi\"]:\n",
+    "    #         gnn_in = 6\n",
+    "    #     elif p_mode in [\"tri_eflow\"]:\n",
+    "    #         gnn_in = 12\n",
+    "    #     model_dict = {\"gnn_in\":gnn_in, \"gnn_out\":go, \"gnn_hidden\":gh, \"gnn_layers\":gl, \"mlp_hidden\":0, \"mlp_layers\":0}\n",
+    "    #     train_classical(preprocess_mode=p_mode, model_dict=model_dict)\n",
     "\n",
     "    # # Quantum Fully Connected Graph\n",
     "    # for gnn_layers, gnn_reupload in product((1,2), (0,1)):\n",
@@ -489,18 +500,18 @@
     "    #     model_dict[\"gnn_measurements\"] = gnn_measurements\n",
     "    #     train_qtrivial(preprocess_mode, model_dict)\n",
     "\n",
-    "    # for gnn_layers, gnn_reupload, gnn_nn_qubits in product((1,2), (0,1), (3,4)):\n",
-    "    #     # QFCGNN\n",
-    "    #     model_class     = QuantumRyFCGNN\n",
-    "    #     gnn_idx_qubits  = int(np.ceil(np.log2(max(\n",
-    "    #         max(ak.count(sig_events[\"fast_pt\"], axis=1)), \n",
-    "    #         max(ak.count(bkg_events[\"fast_pt\"], axis=1))))))\n",
-    "    #     preprocess_mode = \"normalize_pi\"\n",
-    "    #     # gnn_layers      = parse_args.q_gnn_layers\n",
-    "    #     # gnn_reupload    = parse_args.q_gnn_reupload\n",
-    "    #     gnn_num_qnn     = parse_args.q_gnn_num_qnn\n",
-    "    #     model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":gnn_nn_qubits, \"gnn_layers\":gnn_layers, \"gnn_reupload\":gnn_reupload, \"gnn_num_qnn\":gnn_num_qnn}\n",
-    "    #     train_qfcgnn(preprocess_mode, model_class, model_dict)"
+    "    for gnn_layers, gnn_reupload, gnn_nn_qubits in product((1,2), (0,1), (1,2,3)):\n",
+    "        # QFCGNN\n",
+    "        model_class     = QuantumWtRotFCGNN\n",
+    "        gnn_idx_qubits  = int(np.ceil(np.log2(max(\n",
+    "            max(ak.count(sig_events[\"fast_pt\"], axis=1)), \n",
+    "            max(ak.count(bkg_events[\"fast_pt\"], axis=1))))))\n",
+    "        preprocess_mode = \"normalize_pi\"\n",
+    "        # gnn_layers      = parse_args.q_gnn_layers\n",
+    "        # gnn_reupload    = parse_args.q_gnn_reupload\n",
+    "        gnn_num_qnn     = parse_args.q_gnn_num_qnn\n",
+    "        model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":gnn_nn_qubits, \"gnn_layers\":gnn_layers, \"gnn_reupload\":gnn_reupload, \"gnn_num_qnn\":gnn_num_qnn}\n",
+    "        train_qfcgnn(preprocess_mode, model_class, model_dict)"
    ]
   }
  ],
