20230926 Fix ClassicalMLP num_layers bug

--- a/g_eflow_2pcgnn.ipynb
+++ b/g_eflow_2pcgnn.ipynb
@@ -366,13 +366,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(model, data_module, train_info, graph=True):\n",
+    "def train(model, data_module, train_info, suffix=\"\", graph=True):\n",
     "    # setup wandb logger\n",
     "    wandb_info = {}\n",
     "    if cf[\"wandb\"]:\n",
     "        wandb_info[\"project\"]  = cf[\"project\"]\n",
     "        wandb_info[\"group\"]    = f\"{train_info['sig']}_{train_info['bkg']}\"\n",
-    "        wandb_info[\"name\"]     = f\"{train_info['group_rnd']} | {cf['time']}_{train_info['rnd_seed']}\"\n",
+    "        wandb_info[\"name\"]     = f\"{train_info['group_rnd']} | {cf['time']}_{train_info['rnd_seed']}{suffix}\"\n",
     "        wandb_info[\"id\"]       = wandb_info[\"name\"]\n",
     "        wandb_info[\"save_dir\"] = root_dir \n",
     "        wandb_logger = WandbLogger(**wandb_info)\n",
@@ -445,7 +445,7 @@
     "    bkg_events  = bkg_fatjet_events.generate_uniform_pt_events(bin=data_info[\"bin\"], num_bin_data=data_info[\"num_bin_data\"], num_ptcs_limit=data_info[\"num_ptcs_limit\"])\n",
     "    data_suffix = f\"cut{data_info['cut']}_ptc{data_info['num_pt_ptcs']}_bin{data_info['bin']}-{data_info['num_bin_data']}_R{data_info['subjet_radius']}\"\n",
     "\n",
-    "    def train_classical(preprocess_mode, model_dict):\n",
+    "    def train_classical(preprocess_mode, model_dict, suffix=\"\"):\n",
     "        data_module = JetDataModule(sig_events, bkg_events, preprocess_mode)\n",
     "        model       = Classical2PCGNN(**model_dict)\n",
     "        go, gh, gl  = model_dict['gnn_out'], model_dict['gnn_hidden'], model_dict['gnn_layers']\n",
@@ -454,9 +454,9 @@
     "        train_info[\"group_rnd\"] = f\"{model.__class__.__name__}_{preprocess_mode}_go{go}_gh{gh}_gl{gl}_mh{mh}_ml{ml} | {data_suffix}\"\n",
     "        train_info.update(model_dict)\n",
     "        train_info.update(data_info)\n",
-    "        train(model, data_module, train_info)\n",
+    "        train(model, data_module, train_info, suffix=suffix)\n",
     "\n",
-    "    def train_qtrivial(preprocess_mode, model_dict):\n",
+    "    def train_qtrivial(preprocess_mode, model_dict, suffix=\"\"):\n",
     "        data_module = JetDataModule(sig_events, bkg_events, preprocess_mode)\n",
     "        model       = QuantumAngle2PCGNN(**model_dict)\n",
     "        gl, gr      = model_dict['gnn_layers'], model_dict['gnn_reupload']\n",
@@ -464,9 +464,9 @@
     "        train_info[\"group_rnd\"] = f\"{model.__class__.__name__}_{preprocess_mode}_gr{gr}_gl{gl} | {data_suffix}\"\n",
     "        train_info.update(model_dict)\n",
     "        train_info.update(data_info)\n",
-    "        train(model, data_module, train_info)\n",
+    "        train(model, data_module, train_info, suffix=suffix)\n",
     "\n",
-    "    def train_qfcgnn(preprocess_mode, model_class, model_dict):\n",
+    "    def train_qfcgnn(preprocess_mode, model_class, model_dict, suffix=\"\"):\n",
     "        data_module = JetDataModule(sig_events, bkg_events, preprocess_mode, graph=False)\n",
     "        model       = model_class(**model_dict)\n",
     "        qidx, qnn   = model_dict['gnn_idx_qubits'], model_dict['gnn_nn_qubits']\n",
@@ -476,10 +476,10 @@
     "        train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_QNN{num_qnn}_qidx{qidx}_qnn{qnn}_gl{gl}_gr{gr} | {data_suffix}\"\n",
     "        train_info.update(model_dict)\n",
     "        train_info.update(data_info)\n",
-    "        train(model, data_module, train_info, graph=False)\n",
+    "        train(model, data_module, train_info, suffix=suffix, graph=False)\n",
     "\n",
     "    # # classical ML only\n",
-    "    # for p_mode, go, gh, gl in product([\"\", \"normalize\", \"normalize_pi\", \"tri_eflow\"], [6], [6], [0,1,2]):\n",
+    "    # for p_mode, go, gh, gl in product([\"\", \"normalize\", \"normalize_pi\", \"tri_eflow\"], [6], [6], [2]):\n",
     "    #     if p_mode in [\"\", \"normalize\", \"normalize_pi\"]:\n",
     "    #         gnn_in = 6\n",
     "    #     elif p_mode in [\"tri_eflow\"]:\n",
@@ -500,7 +500,7 @@
     "    #     model_dict[\"gnn_measurements\"] = gnn_measurements\n",
     "    #     train_qtrivial(preprocess_mode, model_dict)\n",
     "\n",
-    "    for gnn_layers, gnn_reupload, gnn_nn_qubits in product((1,2), (0,1), (1,2,3)):\n",
+    "    for gnn_layers, gnn_reupload, gnn_nn_qubits in product([1,2], [0,1], [2]):\n",
     "        # QFCGNN\n",
     "        model_class     = QuantumWtRotFCGNN\n",
     "        gnn_idx_qubits  = int(np.ceil(np.log2(max(\n",
@@ -509,7 +509,7 @@
     "        preprocess_mode = \"normalize_pi\"\n",
     "        # gnn_layers      = parse_args.q_gnn_layers\n",
     "        # gnn_reupload    = parse_args.q_gnn_reupload\n",
-    "        gnn_num_qnn     = parse_args.q_gnn_num_qnn\n",
+    "        gnn_num_qnn     = 6\n",
     "        model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":gnn_nn_qubits, \"gnn_layers\":gnn_layers, \"gnn_reupload\":gnn_reupload, \"gnn_num_qnn\":gnn_num_qnn}\n",
     "        train_qfcgnn(preprocess_mode, model_class, model_dict)"
    ]
