--- a/r_wandb_api_run.ipynb
+++ b/r_wandb_api_run.ipynb
@@ -9,21 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import wandb\n",
     "\n",
     "api     = wandb.Api()\n",
-    "date    = \"20230923_211611\"\n",
+    "date    = \"Classical2PCGNN\"\n",
     "suffix  = \"\"\n",
     "project = \"g_eflow_QFCGNN\"\n",
     "\n",
     "for run in api.runs(f\"ntuyianchen/{project}\"):\n",
     "    if date in run.id and suffix in run.id:\n",
     "        print(run.id)\n",
-    "        # run.delete()\n",
+    "        run.delete()\n",
     "    # elif run.id is None:\n",
     "    #     print(run.id)"
    ]
