--- a/g_eflow_2pcgnn.ipynb
+++ b/g_eflow_2pcgnn.ipynb
@@ -354,6 +354,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class QuantumSuperFCGNN(nn.Module):\n",
+    "    def __init__(self, gnn_idx_qubits, gnn_max_reupload, **kwargs):\n",
+    "        super().__init__()\n",
+    "        def angle_ctrl_enc_operator(_input, control, control_values):\n",
+    "            ctrl = qml.ctrl(qml.AngleEmbedding, control=control, control_values=control_values)\n",
+    "            ctrl(features=_input, wires=range(gnn_idx_qubits, gnn_idx_qubits+3), rotation=\"Y\")\n",
+    "        def rot_ctrl_enc_operator(_input, control, control_values):\n",
+    "            ctrl_H = qml.ctrl(qml.Hadamard, control=control, control_values=control_values)\n",
+    "            ctrl_H(wires=gnn_idx_qubits)\n",
+    "            ctrl_R = qml.ctrl(qml.Rot, control=control, control_values=control_values)\n",
+    "            ctrl_R(theta=_input[0], phi=_input[1], omega=_input[2], wires=gnn_idx_qubits)\n",
+    "        module       = m_nn.QuantumDisorderedFCGraph\n",
+    "        angle_module = lambda r: module(gnn_idx_qubits, num_nn_qubits=3, num_layers=2, num_reupload=r, ctrl_enc_operator=angle_ctrl_enc_operator)\n",
+    "        rot_module   = lambda r: module(gnn_idx_qubits, num_nn_qubits=2, num_layers=2, num_reupload=r, ctrl_enc_operator=rot_ctrl_enc_operator)\n",
+    "        self.phi     = nn.ModuleList([angle_module(r) for r in range(gnn_max_reupload+1)])\n",
+    "        self.phi    += nn.ModuleList([rot_module(r) for r in range(gnn_max_reupload+1)])\n",
+    "        self.mlp = m_nn.ClassicalMLP(in_channel=(3+2)*(gnn_max_reupload+1), out_channel=1, hidden_channel=0, num_layers=0)\n",
+    "    def forward(self, x):\n",
+    "        # inputs should be 1-dim for each data, otherwise it would be confused with batch shape\n",
+    "        x = torch.flatten(x, start_dim=-2, end_dim=-1)\n",
+    "        x = torch.cat([self.phi[i](x) for i in range(len(self.phi))], dim=-1)\n",
+    "        x = self.mlp(x)\n",
+    "        return x"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -478,6 +509,15 @@
     "        train_info.update(data_info)\n",
     "        train(model, data_module, train_info, suffix=suffix, graph=False)\n",
     "\n",
+    "    def train_superqfcgnn(preprocess_mode, model_dict, suffix=\"\"):\n",
+    "        data_module = JetDataModule(sig_events, bkg_events, preprocess_mode, graph=False)\n",
+    "        model       = QuantumSuperFCGNN(**model_dict)\n",
+    "        train_info  = {\"rnd_seed\":cf[\"rnd_seed\"], \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode}\n",
+    "        train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_qidx{model_dict['gnn_idx_qubits']}_maxgr{model_dict['gnn_max_reupload']} | {data_suffix}\"\n",
+    "        train_info.update(model_dict)\n",
+    "        train_info.update(data_info)\n",
+    "        train(model, data_module, train_info, suffix=suffix, graph=False)\n",
+    "\n",
     "    # # classical ML only\n",
     "    # for p_mode, go, gh, gl in product([\"\", \"normalize\", \"normalize_pi\", \"tri_eflow\"], [6], [6], [2]):\n",
     "    #     if p_mode in [\"\", \"normalize\", \"normalize_pi\"]:\n",
@@ -500,18 +540,26 @@
     "    #     model_dict[\"gnn_measurements\"] = gnn_measurements\n",
     "    #     train_qtrivial(preprocess_mode, model_dict)\n",
     "\n",
-    "    for gnn_layers, gnn_reupload, gnn_nn_qubits in product([1,2], [0,1], [2]):\n",
-    "        # QFCGNN\n",
-    "        model_class     = QuantumWtRotFCGNN\n",
+    "    # for gnn_layers, gnn_reupload, gnn_nn_qubits in product([1,2], [0,1], [2]):\n",
+    "    #     # QFCGNN\n",
+    "    #     model_class     = QuantumWtRotFCGNN\n",
+    "    #     gnn_idx_qubits  = int(np.ceil(np.log2(max(\n",
+    "    #         max(ak.count(sig_events[\"fast_pt\"], axis=1)), \n",
+    "    #         max(ak.count(bkg_events[\"fast_pt\"], axis=1))))))\n",
+    "    #     preprocess_mode = \"normalize_pi\"\n",
+    "    #     # gnn_layers      = parse_args.q_gnn_layers\n",
+    "    #     # gnn_reupload    = parse_args.q_gnn_reupload\n",
+    "    #     gnn_num_qnn     = 6\n",
+    "    #     model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":gnn_nn_qubits, \"gnn_layers\":gnn_layers, \"gnn_reupload\":gnn_reupload, \"gnn_num_qnn\":gnn_num_qnn}\n",
+    "    #     train_qfcgnn(preprocess_mode, model_class, model_dict)\n",
+    "\n",
+    "    # Super QFCGNN\n",
+    "    for r in range(4):\n",
     "        gnn_idx_qubits  = int(np.ceil(np.log2(max(\n",
     "            max(ak.count(sig_events[\"fast_pt\"], axis=1)), \n",
     "            max(ak.count(bkg_events[\"fast_pt\"], axis=1))))))\n",
-    "        preprocess_mode = \"normalize_pi\"\n",
-    "        # gnn_layers      = parse_args.q_gnn_layers\n",
-    "        # gnn_reupload    = parse_args.q_gnn_reupload\n",
-    "        gnn_num_qnn     = 6\n",
-    "        model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":gnn_nn_qubits, \"gnn_layers\":gnn_layers, \"gnn_reupload\":gnn_reupload, \"gnn_num_qnn\":gnn_num_qnn}\n",
-    "        train_qfcgnn(preprocess_mode, model_class, model_dict)"
+    "        model_dict = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_max_reupload\":r}\n",
+    "        train_superqfcgnn(\"normalize_pi\", model_dict)"
    ]
   }
  ],
