--- a/r_wandb_api_run.ipynb
+++ b/r_wandb_api_run.ipynb
@@ -9,14 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QuantumSuperFCGNN_normalize_pi_qidx3_maxgr0 | cut(800, 1000)_ptc8_bin10-500_R0 | 20230927_153706_0\n"
+     ]
+    }
+   ],
    "source": [
     "import wandb\n",
     "\n",
     "api     = wandb.Api()\n",
-    "date    = \"Classical2PCGNN\"\n",
+    "date    = \"20230927_153706\"\n",
     "suffix  = \"\"\n",
     "project = \"g_eflow_QFCGNN\"\n",
     "\n",
