20230929 SuperFCGNN (Quantum and  Hybrid)

--- a/g_eflow_2pcgnn.ipynb
+++ b/g_eflow_2pcgnn.ipynb
@@ -375,8 +375,21 @@
     "        rot_module   = lambda r: module(gnn_idx_qubits, num_nn_qubits=2, num_layers=2, num_reupload=r, ctrl_enc_operator=rot_ctrl_enc_operator)\n",
     "        self.phi     = nn.ModuleList([angle_module(r) for r in range(gnn_max_reupload+1)])\n",
     "        self.phi    += nn.ModuleList([rot_module(r) for r in range(gnn_max_reupload+1)])\n",
-    "        self.mlp = m_nn.ClassicalMLP(in_channel=(3+2)*(gnn_max_reupload+1), out_channel=1, hidden_channel=0, num_layers=0)\n",
+    "        self.mlp     = m_nn.ClassicalMLP(in_channel=(3+2)*(gnn_max_reupload+1), out_channel=1, hidden_channel=0, num_layers=0)\n",
     "    def forward(self, x):\n",
+    "        # inputs should be 1-dim for each data, otherwise it would be confused with batch shape\n",
+    "        x = torch.flatten(x, start_dim=-2, end_dim=-1)\n",
+    "        x = torch.cat([self.phi[i](x) for i in range(len(self.phi))], dim=-1)\n",
+    "        x = self.mlp(x)\n",
+    "        return x\n",
+    "    \n",
+    "class HybridSuperFCGNN(QuantumSuperFCGNN):\n",
+    "    def __init__(self, gnn_idx_qubits, gnn_max_reupload, **kwargs):\n",
+    "        super().__init__(gnn_idx_qubits, gnn_max_reupload, **kwargs)\n",
+    "        self.pre_mlp = nn.Linear(3, 3)\n",
+    "    def forward(self, x):\n",
+    "        # pre-linear\n",
+    "        x = self.pre_mlp(x)\n",
     "        # inputs should be 1-dim for each data, otherwise it would be confused with batch shape\n",
     "        x = torch.flatten(x, start_dim=-2, end_dim=-1)\n",
     "        x = torch.cat([self.phi[i](x) for i in range(len(self.phi))], dim=-1)\n",
@@ -511,7 +524,7 @@
     "\n",
     "    def train_superqfcgnn(preprocess_mode, model_dict, suffix=\"\"):\n",
     "        data_module = JetDataModule(sig_events, bkg_events, preprocess_mode, graph=False)\n",
-    "        model       = QuantumSuperFCGNN(**model_dict)\n",
+    "        model       = HybridSuperFCGNN(**model_dict)\n",
     "        train_info  = {\"rnd_seed\":cf[\"rnd_seed\"], \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode}\n",
     "        train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_qidx{model_dict['gnn_idx_qubits']}_maxgr{model_dict['gnn_max_reupload']} | {data_suffix}\"\n",
     "        train_info.update(model_dict)\n",
