--- a/g_eflow_2pcgnn.ipynb
+++ b/g_eflow_2pcgnn.ipynb
@@ -345,6 +345,21 @@
     "        # Weighted QuantumRyFCGNN\n",
     "        super().__init__(gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, gnn_num_qnn, **{\"pt_weight\":True})\n",
     "\n",
+    "class QuantumMultiRotFCGNN(QuantumFCGNN):\n",
+    "    def __init__(self, gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, gnn_num_qnn, **kwargs):\n",
+    "        def ctrl_enc_operator(_input, control, control_values):\n",
+    "            for i in range(gnn_nn_qubits):\n",
+    "                ctrl_H = qml.ctrl(qml.Hadamard, control=control, control_values=control_values)\n",
+    "                ctrl_H(wires=gnn_idx_qubits+i)\n",
+    "                ctrl_R = qml.ctrl(qml.Rot, control=control, control_values=control_values)\n",
+    "                ctrl_R(theta=_input[0], phi=_input[1], omega=_input[2], wires=gnn_idx_qubits+i)\n",
+    "        super().__init__(gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, gnn_num_qnn, ctrl_enc_operator, **kwargs)\n",
+    "\n",
+    "class QuantumWtMultiRotFCGNN(QuantumMultiRotFCGNN):\n",
+    "    def __init__(self, gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, gnn_num_qnn, **kwargs):\n",
+    "        # Weighted QuantumRyFCGNN\n",
+    "        super().__init__(gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, gnn_num_qnn, **{\"pt_weight\":True})\n",
+    "\n",
     "# class QuantumAmpFCGNN(QuantumFCGNN):\n",
     "#     def __init__(self, gnn_idx_qubits, gnn_nn_qubits, gnn_layers, gnn_reupload, gnn_num_qnn, **kwargs):\n",
     "#         def ctrl_enc_operator(_input, control, control_values):\n",
@@ -477,102 +492,103 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_info = {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":cf[\"num_bin_data\"], \"num_ptcs_limit\":None, \"num_pt_ptcs\":8}\n",
-    "sig_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"sig\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"], num_pt_ptcs=data_info[\"num_pt_ptcs\"])\n",
-    "bkg_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"bkg\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"], num_pt_ptcs=data_info[\"num_pt_ptcs\"])\n",
+    "for num_pt_ptcs in [2, 4, 8, 16]:\n",
+    "    data_info = {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":cf[\"num_bin_data\"], \"num_ptcs_limit\":None, \"num_pt_ptcs\":num_pt_ptcs}\n",
+    "    sig_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"sig\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"], num_pt_ptcs=data_info[\"num_pt_ptcs\"])\n",
+    "    bkg_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"bkg\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"], num_pt_ptcs=data_info[\"num_pt_ptcs\"])\n",
     "\n",
-    "for rnd_seed in range(1):\n",
-    "    cf[\"rnd_seed\"] = rnd_seed\n",
-    "    L.seed_everything(cf[\"rnd_seed\"])\n",
+    "    for rnd_seed in range(1):\n",
+    "        cf[\"rnd_seed\"] = rnd_seed\n",
+    "        L.seed_everything(cf[\"rnd_seed\"])\n",
     "\n",
-    "    sig_events  = sig_fatjet_events.generate_uniform_pt_events(bin=data_info[\"bin\"], num_bin_data=data_info[\"num_bin_data\"], num_ptcs_limit=data_info[\"num_ptcs_limit\"])\n",
-    "    bkg_events  = bkg_fatjet_events.generate_uniform_pt_events(bin=data_info[\"bin\"], num_bin_data=data_info[\"num_bin_data\"], num_ptcs_limit=data_info[\"num_ptcs_limit\"])\n",
-    "    data_suffix = f\"cut{data_info['cut']}_ptc{data_info['num_pt_ptcs']}_bin{data_info['bin']}-{data_info['num_bin_data']}_R{data_info['subjet_radius']}\"\n",
+    "        sig_events  = sig_fatjet_events.generate_uniform_pt_events(bin=data_info[\"bin\"], num_bin_data=data_info[\"num_bin_data\"], num_ptcs_limit=data_info[\"num_ptcs_limit\"])\n",
+    "        bkg_events  = bkg_fatjet_events.generate_uniform_pt_events(bin=data_info[\"bin\"], num_bin_data=data_info[\"num_bin_data\"], num_ptcs_limit=data_info[\"num_ptcs_limit\"])\n",
+    "        data_suffix = f\"cut{data_info['cut']}_ptc{data_info['num_pt_ptcs']}_bin{data_info['bin']}-{data_info['num_bin_data']}_R{data_info['subjet_radius']}\"\n",
     "\n",
-    "    def train_classical(preprocess_mode, model_dict, suffix=\"\"):\n",
-    "        data_module = JetDataModule(sig_events, bkg_events, preprocess_mode)\n",
-    "        model       = Classical2PCGNN(**model_dict)\n",
-    "        go, gh, gl  = model_dict['gnn_out'], model_dict['gnn_hidden'], model_dict['gnn_layers']\n",
-    "        mh, ml      = model_dict['mlp_hidden'], model_dict['mlp_layers']\n",
-    "        train_info  = {\"rnd_seed\":cf[\"rnd_seed\"], \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode}\n",
-    "        train_info[\"group_rnd\"] = f\"{model.__class__.__name__}_{preprocess_mode}_go{go}_gh{gh}_gl{gl}_mh{mh}_ml{ml} | {data_suffix}\"\n",
-    "        train_info.update(model_dict)\n",
-    "        train_info.update(data_info)\n",
-    "        train(model, data_module, train_info, suffix=suffix)\n",
+    "        def train_classical(preprocess_mode, model_dict, suffix=\"\"):\n",
+    "            data_module = JetDataModule(sig_events, bkg_events, preprocess_mode)\n",
+    "            model       = Classical2PCGNN(**model_dict)\n",
+    "            go, gh, gl  = model_dict['gnn_out'], model_dict['gnn_hidden'], model_dict['gnn_layers']\n",
+    "            mh, ml      = model_dict['mlp_hidden'], model_dict['mlp_layers']\n",
+    "            train_info  = {\"rnd_seed\":cf[\"rnd_seed\"], \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode}\n",
+    "            train_info[\"group_rnd\"] = f\"{model.__class__.__name__}_{preprocess_mode}_go{go}_gh{gh}_gl{gl}_mh{mh}_ml{ml} | {data_suffix}\"\n",
+    "            train_info.update(model_dict)\n",
+    "            train_info.update(data_info)\n",
+    "            train(model, data_module, train_info, suffix=suffix)\n",
     "\n",
-    "    def train_qtrivial(preprocess_mode, model_dict, suffix=\"\"):\n",
-    "        data_module = JetDataModule(sig_events, bkg_events, preprocess_mode)\n",
-    "        model       = QuantumAngle2PCGNN(**model_dict)\n",
-    "        gl, gr      = model_dict['gnn_layers'], model_dict['gnn_reupload']\n",
-    "        train_info  = {\"rnd_seed\":cf[\"rnd_seed\"], \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode}\n",
-    "        train_info[\"group_rnd\"] = f\"{model.__class__.__name__}_{preprocess_mode}_gr{gr}_gl{gl} | {data_suffix}\"\n",
-    "        train_info.update(model_dict)\n",
-    "        train_info.update(data_info)\n",
-    "        train(model, data_module, train_info, suffix=suffix)\n",
+    "        def train_qtrivial(preprocess_mode, model_dict, suffix=\"\"):\n",
+    "            data_module = JetDataModule(sig_events, bkg_events, preprocess_mode)\n",
+    "            model       = QuantumAngle2PCGNN(**model_dict)\n",
+    "            gl, gr      = model_dict['gnn_layers'], model_dict['gnn_reupload']\n",
+    "            train_info  = {\"rnd_seed\":cf[\"rnd_seed\"], \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode}\n",
+    "            train_info[\"group_rnd\"] = f\"{model.__class__.__name__}_{preprocess_mode}_gr{gr}_gl{gl} | {data_suffix}\"\n",
+    "            train_info.update(model_dict)\n",
+    "            train_info.update(data_info)\n",
+    "            train(model, data_module, train_info, suffix=suffix)\n",
     "\n",
-    "    def train_qfcgnn(preprocess_mode, model_class, model_dict, suffix=\"\"):\n",
-    "        data_module = JetDataModule(sig_events, bkg_events, preprocess_mode, graph=False)\n",
-    "        model       = model_class(**model_dict)\n",
-    "        qidx, qnn   = model_dict['gnn_idx_qubits'], model_dict['gnn_nn_qubits']\n",
-    "        gl, gr      = model_dict['gnn_layers'], model_dict['gnn_reupload']\n",
-    "        num_qnn     = model_dict['gnn_num_qnn']\n",
-    "        train_info  = {\"rnd_seed\":cf[\"rnd_seed\"], \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode}\n",
-    "        train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_QNN{num_qnn}_qidx{qidx}_qnn{qnn}_gl{gl}_gr{gr} | {data_suffix}\"\n",
-    "        train_info.update(model_dict)\n",
-    "        train_info.update(data_info)\n",
-    "        train(model, data_module, train_info, suffix=suffix, graph=False)\n",
+    "        def train_qfcgnn(preprocess_mode, model_class, model_dict, suffix=\"\"):\n",
+    "            data_module = JetDataModule(sig_events, bkg_events, preprocess_mode, graph=False)\n",
+    "            model       = model_class(**model_dict)\n",
+    "            qidx, qnn   = model_dict['gnn_idx_qubits'], model_dict['gnn_nn_qubits']\n",
+    "            gl, gr      = model_dict['gnn_layers'], model_dict['gnn_reupload']\n",
+    "            num_qnn     = model_dict['gnn_num_qnn']\n",
+    "            train_info  = {\"rnd_seed\":cf[\"rnd_seed\"], \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode}\n",
+    "            train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_QNN{num_qnn}_qidx{qidx}_qnn{qnn}_gl{gl}_gr{gr} | {data_suffix}\"\n",
+    "            train_info.update(model_dict)\n",
+    "            train_info.update(data_info)\n",
+    "            train(model, data_module, train_info, suffix=suffix, graph=False)\n",
     "\n",
-    "    def train_superqfcgnn(preprocess_mode, model_dict, suffix=\"\"):\n",
-    "        data_module = JetDataModule(sig_events, bkg_events, preprocess_mode, graph=False)\n",
-    "        model       = HybridSuperFCGNN(**model_dict)\n",
-    "        train_info  = {\"rnd_seed\":cf[\"rnd_seed\"], \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode}\n",
-    "        train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_qidx{model_dict['gnn_idx_qubits']}_maxgr{model_dict['gnn_max_reupload']} | {data_suffix}\"\n",
-    "        train_info.update(model_dict)\n",
-    "        train_info.update(data_info)\n",
-    "        train(model, data_module, train_info, suffix=suffix, graph=False)\n",
+    "        def train_superqfcgnn(preprocess_mode, model_dict, suffix=\"\"):\n",
+    "            data_module = JetDataModule(sig_events, bkg_events, preprocess_mode, graph=False)\n",
+    "            model       = HybridSuperFCGNN(**model_dict)\n",
+    "            train_info  = {\"rnd_seed\":cf[\"rnd_seed\"], \"model_name\":model.__class__.__name__, \"preprocess_mode\":preprocess_mode}\n",
+    "            train_info[\"group_rnd\"]  = f\"{model.__class__.__name__}_{preprocess_mode}_qidx{model_dict['gnn_idx_qubits']}_maxgr{model_dict['gnn_max_reupload']} | {data_suffix}\"\n",
+    "            train_info.update(model_dict)\n",
+    "            train_info.update(data_info)\n",
+    "            train(model, data_module, train_info, suffix=suffix, graph=False)\n",
     "\n",
-    "    # # classical ML only\n",
-    "    # for p_mode, go, gh, gl in product([\"\", \"normalize\", \"normalize_pi\", \"tri_eflow\"], [6], [6], [2]):\n",
-    "    #     if p_mode in [\"\", \"normalize\", \"normalize_pi\"]:\n",
-    "    #         gnn_in = 6\n",
-    "    #     elif p_mode in [\"tri_eflow\"]:\n",
-    "    #         gnn_in = 12\n",
-    "    #     model_dict = {\"gnn_in\":gnn_in, \"gnn_out\":go, \"gnn_hidden\":gh, \"gnn_layers\":gl, \"mlp_hidden\":0, \"mlp_layers\":0}\n",
-    "    #     train_classical(preprocess_mode=p_mode, model_dict=model_dict)\n",
+    "        # # classical ML only\n",
+    "        # for p_mode, go, gh, gl in product([\"\", \"normalize\", \"normalize_pi\", \"tri_eflow\"], [3], [3], [0, 1, 2]):\n",
+    "        #     if p_mode in [\"\", \"normalize\", \"normalize_pi\"]:\n",
+    "        #         gnn_in = 6\n",
+    "        #     elif p_mode in [\"tri_eflow\"]:\n",
+    "        #         gnn_in = 12\n",
+    "        #     model_dict = {\"gnn_in\":gnn_in, \"gnn_out\":go, \"gnn_hidden\":gh, \"gnn_layers\":gl, \"mlp_hidden\":0, \"mlp_layers\":0}\n",
+    "        #     train_classical(preprocess_mode=p_mode, model_dict=model_dict)\n",
     "\n",
-    "    # # Quantum Fully Connected Graph\n",
-    "    # for gnn_layers, gnn_reupload in product((1,2), (0,1)):\n",
-    "    #     # Trivial GNN\n",
-    "    #     preprocess_mode  = \"normalize_pi\"\n",
-    "    #     # gnn_layers       = parse_args.q_gnn_layers\n",
-    "    #     # gnn_reupload     = parse_args.q_gnn_reupload\n",
-    "    #     gnn_qubits       = 6\n",
-    "    #     gnn_num_qnn      = parse_args.q_gnn_num_qnn\n",
-    "    #     model_dict       = {\"gnn_layers\":gnn_layers, \"gnn_reupload\":gnn_reupload, \"gnn_qubits\":gnn_qubits}\n",
-    "    #     gnn_measurements = list(product(range(gnn_qubits), [\"Z\"]))\n",
-    "    #     model_dict[\"gnn_measurements\"] = gnn_measurements\n",
-    "    #     train_qtrivial(preprocess_mode, model_dict)\n",
+    "        # # Quantum Fully Connected Graph\n",
+    "        # for gnn_layers, gnn_reupload in product((1,2), (0,1)):\n",
+    "        #     # Trivial GNN\n",
+    "        #     preprocess_mode  = \"normalize_pi\"\n",
+    "        #     # gnn_layers       = parse_args.q_gnn_layers\n",
+    "        #     # gnn_reupload     = parse_args.q_gnn_reupload\n",
+    "        #     gnn_qubits       = 6\n",
+    "        #     gnn_num_qnn      = parse_args.q_gnn_num_qnn\n",
+    "        #     model_dict       = {\"gnn_layers\":gnn_layers, \"gnn_reupload\":gnn_reupload, \"gnn_qubits\":gnn_qubits}\n",
+    "        #     gnn_measurements = list(product(range(gnn_qubits), [\"Z\"]))\n",
+    "        #     model_dict[\"gnn_measurements\"] = gnn_measurements\n",
+    "        #     train_qtrivial(preprocess_mode, model_dict)\n",
     "\n",
-    "    # for gnn_layers, gnn_reupload, gnn_nn_qubits in product([1,2], [0,1], [2]):\n",
-    "    #     # QFCGNN\n",
-    "    #     model_class     = QuantumWtRotFCGNN\n",
-    "    #     gnn_idx_qubits  = int(np.ceil(np.log2(max(\n",
-    "    #         max(ak.count(sig_events[\"fast_pt\"], axis=1)), \n",
-    "    #         max(ak.count(bkg_events[\"fast_pt\"], axis=1))))))\n",
-    "    #     preprocess_mode = \"normalize_pi\"\n",
-    "    #     # gnn_layers      = parse_args.q_gnn_layers\n",
-    "    #     # gnn_reupload    = parse_args.q_gnn_reupload\n",
-    "    #     gnn_num_qnn     = 6\n",
-    "    #     model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":gnn_nn_qubits, \"gnn_layers\":gnn_layers, \"gnn_reupload\":gnn_reupload, \"gnn_num_qnn\":gnn_num_qnn}\n",
-    "    #     train_qfcgnn(preprocess_mode, model_class, model_dict)\n",
+    "        for gnn_layers, gnn_reupload, gnn_nn_qubits in product([1,2], [0,1], [1,2,3]):\n",
+    "            # QFCGNN\n",
+    "            model_class     = QuantumMultiRotFCGNN\n",
+    "            gnn_idx_qubits  = int(np.ceil(np.log2(max(\n",
+    "                max(ak.count(sig_events[\"fast_pt\"], axis=1)), \n",
+    "                max(ak.count(bkg_events[\"fast_pt\"], axis=1))))))\n",
+    "            preprocess_mode = \"normalize_pi\"\n",
+    "            # gnn_layers      = parse_args.q_gnn_layers\n",
+    "            # gnn_reupload    = parse_args.q_gnn_reupload\n",
+    "            gnn_num_qnn     = 1\n",
+    "            model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":gnn_nn_qubits, \"gnn_layers\":gnn_layers, \"gnn_reupload\":gnn_reupload, \"gnn_num_qnn\":gnn_num_qnn}\n",
+    "            train_qfcgnn(preprocess_mode, model_class, model_dict)\n",
     "\n",
-    "    # Super QFCGNN\n",
-    "    for r in range(4):\n",
-    "        gnn_idx_qubits  = int(np.ceil(np.log2(max(\n",
-    "            max(ak.count(sig_events[\"fast_pt\"], axis=1)), \n",
-    "            max(ak.count(bkg_events[\"fast_pt\"], axis=1))))))\n",
-    "        model_dict = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_max_reupload\":r}\n",
-    "        train_superqfcgnn(\"normalize_pi\", model_dict)"
+    "        # # Super QFCGNN\n",
+    "        # for r in range(4):\n",
+    "        #     gnn_idx_qubits  = int(np.ceil(np.log2(max(\n",
+    "        #         max(ak.count(sig_events[\"fast_pt\"], axis=1)), \n",
+    "        #         max(ak.count(bkg_events[\"fast_pt\"], axis=1))))))\n",
+    "        #     model_dict = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_max_reupload\":r}\n",
+    "        #     train_superqfcgnn(\"normalize_pi\", model_dict)"
    ]
   }
  ],
