--- a/r_wandb_api_run.ipynb
+++ b/r_wandb_api_run.ipynb
@@ -9,22 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "QuantumSuperFCGNN_normalize_pi_qidx3_maxgr0 | cut(800, 1000)_ptc8_bin10-500_R0 | 20230927_153706_0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import wandb\n",
     "\n",
     "api     = wandb.Api()\n",
-    "date    = \"20230927_153706\"\n",
+    "date    = \"20231015\"\n",
     "suffix  = \"\"\n",
     "project = \"g_eflow_QFCGNN\"\n",
     "\n",
@@ -45,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
