--- a/g_eflow_2pcgnn.ipynb
+++ b/g_eflow_2pcgnn.ipynb
@@ -102,10 +102,10 @@
     "cf[\"rnd_seed\"]          = parse_args.rnd_seed\n",
     "cf[\"num_train_ratio\"]   = 0.8\n",
     "cf[\"num_bin_data\"]      = 500 # <-----------------------------------------------\n",
-    "cf[\"batch_size\"]        = 100 # <-----------------------------------------------\n",
+    "cf[\"batch_size\"]        = 50 # <-----------------------------------------------\n",
     "cf[\"num_workers\"]       = 0\n",
     "cf[\"max_epochs\"]        = 30 # <-----------------------------------------------\n",
-    "cf[\"accelerator\"]       = \"gpu\"\n",
+    "cf[\"accelerator\"]       = \"cpu\"\n",
     "cf[\"fast_dev_run\"]      = False\n",
     "cf[\"log_every_n_steps\"] = cf[\"batch_size\"] // 2"
    ]
@@ -492,9 +492,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for num_pt_ptcs in [16, 32]:\n",
-    "    # data_info = {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":cf[\"num_bin_data\"], \"num_ptcs_limit\":None, \"num_pt_ptcs\":num_pt_ptcs}\n",
-    "    data_info = {\"sig\": \"VzToTt\", \"bkg\": \"VzToQCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":cf[\"num_bin_data\"], \"num_ptcs_limit\":None, \"num_pt_ptcs\":num_pt_ptcs}\n",
+    "for num_pt_ptcs in [8]:\n",
+    "    data_info = {\"sig\": \"VzToZhToVevebb\", \"bkg\": \"VzToQCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":cf[\"num_bin_data\"], \"num_ptcs_limit\":None, \"num_pt_ptcs\":num_pt_ptcs}\n",
+    "    # data_info = {\"sig\": \"VzToTt\", \"bkg\": \"VzToQCD\", \"cut\": (800, 1000), \"bin\":10, \"subjet_radius\":0, \"num_bin_data\":cf[\"num_bin_data\"], \"num_ptcs_limit\":None, \"num_pt_ptcs\":num_pt_ptcs}\n",
     "    sig_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"sig\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"], num_pt_ptcs=data_info[\"num_pt_ptcs\"])\n",
     "    bkg_fatjet_events = d_mg5_data.FatJetEvents(channel=data_info[\"bkg\"], cut_pt=data_info[\"cut\"], subjet_radius=data_info[\"subjet_radius\"], num_pt_ptcs=data_info[\"num_pt_ptcs\"])\n",
     "\n",
@@ -548,17 +548,16 @@
     "            train_info.update(data_info)\n",
     "            train(model, data_module, train_info, suffix=suffix, graph=False)\n",
     "\n",
-    "        # classical ML only\n",
-    "        for go, gh, gl in product([3,6], [16,64,256], [1,2,4]):\n",
-    "            model_dict = {\n",
-    "                \"gnn_in\":6, \"gnn_out\":go, \"gnn_hidden\":gh, \"gnn_layers\":gl, \n",
-    "                \"mlp_hidden\":0, \"mlp_layers\":0\n",
-    "                }\n",
-    "            train_classical(preprocess_mode=\"normalize_pi\", model_dict=model_dict)\n",
+    "        # # classical ML only\n",
+    "        # for go, gh, gl in product([3,6], [16,64,256], [1,2,4]):\n",
+    "        #     model_dict = {\n",
+    "        #         \"gnn_in\":6, \"gnn_out\":go, \"gnn_hidden\":gh, \"gnn_layers\":gl, \n",
+    "        #         \"mlp_hidden\":0, \"mlp_layers\":0\n",
+    "        #         }\n",
+    "        #     train_classical(preprocess_mode=\"normalize_pi\", model_dict=model_dict)\n",
     "\n",
-    "        # # Quantum Fully Connected Graph\n",
+    "        # # Trivial GNN\n",
     "        # for gnn_layers, gnn_reupload in product((1,2), (0,1)):\n",
-    "        #     # Trivial GNN\n",
     "        #     preprocess_mode  = \"normalize_pi\"\n",
     "        #     # gnn_layers       = parse_args.q_gnn_layers\n",
     "        #     # gnn_reupload     = parse_args.q_gnn_reupload\n",
@@ -569,18 +568,18 @@
     "        #     model_dict[\"gnn_measurements\"] = gnn_measurements\n",
     "        #     train_qtrivial(preprocess_mode, model_dict)\n",
     "\n",
-    "        # for gnn_layers, gnn_reupload, gnn_nn_qubits in product([1,2], [0,1], [1,2,3]):\n",
-    "        #     # QFCGNN\n",
-    "        #     model_class     = QuantumWtMultiRotFCGNN\n",
-    "        #     gnn_idx_qubits  = int(np.ceil(np.log2(max(\n",
-    "        #         max(ak.count(sig_events[\"fast_pt\"], axis=1)), \n",
-    "        #         max(ak.count(bkg_events[\"fast_pt\"], axis=1))))))\n",
-    "        #     preprocess_mode = \"normalize_pi\"\n",
-    "        #     # gnn_layers      = parse_args.q_gnn_layers\n",
-    "        #     # gnn_reupload    = parse_args.q_gnn_reupload\n",
-    "        #     gnn_num_qnn     = 1\n",
-    "        #     model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":gnn_nn_qubits, \"gnn_layers\":gnn_layers, \"gnn_reupload\":gnn_reupload, \"gnn_num_qnn\":gnn_num_qnn}\n",
-    "        #     train_qfcgnn(preprocess_mode, model_class, model_dict)\n",
+    "        # QFCGNN\n",
+    "        for gnn_layers, gnn_reupload, gnn_nn_qubits in product([2,4], [0,3,6], [3,6]):\n",
+    "            model_class     = QuantumMultiRotFCGNN\n",
+    "            gnn_idx_qubits  = int(np.ceil(np.log2(max(\n",
+    "                max(ak.count(sig_events[\"fast_pt\"], axis=1)), \n",
+    "                max(ak.count(bkg_events[\"fast_pt\"], axis=1))))))\n",
+    "            preprocess_mode = \"normalize_pi\"\n",
+    "            # gnn_layers      = parse_args.q_gnn_layers\n",
+    "            # gnn_reupload    = parse_args.q_gnn_reupload\n",
+    "            gnn_num_qnn     = 1\n",
+    "            model_dict      = {\"gnn_idx_qubits\":gnn_idx_qubits, \"gnn_nn_qubits\":gnn_nn_qubits, \"gnn_layers\":gnn_layers, \"gnn_reupload\":gnn_reupload, \"gnn_num_qnn\":gnn_num_qnn}\n",
+    "            train_qfcgnn(preprocess_mode, model_class, model_dict)\n",
     "\n",
     "        # # Super QFCGNN\n",
     "        # for r in range(4):\n",
